open site by clicking logo function is added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>{{title}}</h1>
 <h1>{{head}}</h1>
-<img [src]="imgUrl" width="500px" alt="">
+<img [src]="imgUrl" width="500px" alt="" (click)="showSite()">
