two way binding is added to show msg with name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>{{title}}</h1>
 <h1>{{head}}</h1>
 <img [src]="imgUrl" width="500px" alt="" (click)="showSite()">
+<h1>Hello {{userName}} from BridgeLabz</h1>
+<input type="text" [(ngModel)]=userName>
